--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@
 
 :root{
     --yellow:#f9d806;
+    --soukaina:#8D7B68;
+    --amira:#F1DEC9;
     --light-yellow:#ffee80;
     --black:#130f40;
     --light-color:#666;
@@ -24,7 +26,7 @@ div{
 }
 
 .header{
-    color: var(--black);
+    color: var( --soukaina);
     background-color: #fff;
     box-shadow:0 0 1rem;
     position: fixed;
@@ -34,12 +36,12 @@ div{
 
 .header .logo{
     font-size: 2rem;
-    color:var(--black);
+    color:var( --soukaina);
     font-weight: bold;
 }
 
 .header .logo span{
-    color:var(--yellow);
+    color:var( --soukaina);
 }
 
 .header .navbar-nav a{
@@ -58,7 +60,7 @@ div{
     margin-bottom: 1rem;
     font-size: 10.5vh;
     font-weight: 900;
-    -webkit-text-stroke: .3vh var(--yellow);
+    -webkit-text-stroke: .3vh var( --soukaina);
     color: black;
 }
 
