--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ div{
 .header .navbar-nav a{
     margin:0 1rem;
     font-size: 1.1rem;
-    color:var(--black);
+    color:var(--yellow);
 }
 
 .header .navbar-nav a:hover{
